gcc/testsuite/rust/rustc/ui/rfcs/rfc-2457-non-ascii-idents/extern_block_nonascii_forbidden_dg.rs
#![feature(extern_types)]

extern "C" {
    type 一; // { dg-error "" "" { target *-*-* } }
    fn 二(); // { dg-error "" "" { target *-*-* } }
    static 三: usize; // { dg-error "" "" { target *-*-* } }
}

fn main() {}

